--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Moses Harcourt</h1>
-    <img src="images/mosespic.jpeg" />
+    <img src="mosespic.jpeg" />
     <h2>Summary</h2>
     <p>Highly skilled IT professional with 7 years of experience as a Lead IT Trainer at Krystal Digital Solutions
         Limited. </p>
